Fixed safari backface-visibility

--- a/src/static/main.css
+++ b/src/static/main.css
@@ -2259,6 +2259,7 @@ main {
         width: 100%;
         height: 100%;
         backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
         padding: 40px 30px;
     }
 
